fixed: spacing in App.css

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ iframe {
 }
 
 html {
-  font-family: "Source Sans Pro", "Open Sans", Roboto, Arial, sans-serif;
+  font-family: 'Source Sans Pro', 'Open Sans', Roboto, Arial, sans-serif;
   font-size: 10pt;
   font-weight: 400;
   line-height: 1.4;
@@ -25,10 +25,8 @@ body {
 
 .welcome__text {
   display: block;
-
   margin: 0;
   padding-top: calc(50vh - 20pt);
-
   font-size: 400%;
   font-weight: 700;
   line-height: 1;
